manifests/deployment-uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tkmcircuitmockuat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tkmcircuitmockuat
  template:
    metadata:
      labels:
        app: tkmcircuitmockuat
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'
    spec:
      nodeSelector:
        tkm-uat: 'true'
      hostAliases:
        - ip: "10.230.9.5"
          hostnames:
            - "api.uat.platform.pagopa.it"
      volumes:
        - name: secrets-store-inline-circuit-mock
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: tkm-circuit-mock-spc-uat
            nodePublishSecretRef:
              name: tkm-circuit-mock-kv-store-creds-uat
      containers:
        - name: tkmcircuitmockuat
          image: cstaruatregistry.azurecr.io/tkmcircuitmock
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 4Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 1000m
          volumeMounts:
            - name: secrets-store-inline-circuit-mock
              mountPath: /mnt/secrets-store
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          imagePullPolicy: Always
